operation/CKA/13_pvc_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
spec:
  containers:
    - name: web-server
      image: nginx
      ports:
        - containerPort: 80
          name: http-server
      volumeMounts:
        - mountPath: /usr/share/nginx.html
          name: data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: pv-volume
