operation/CKA/14_many_pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: legacy-app 
spec: 
  containers: 
  - name: count 
    image: busybox 
args:
    - /bin/sh 
    - -c 
    - > 
      i=0; 
      while true; 
      do 
        echo "$i: $(date)" >> /var/log/legacy-app.log; 
        sleep 1; 
      done 
    volumeMounts: 
    - name: varlog 
      mountPath: /var/log 
  - name: sidecar 
    image: busybox 
    args: [/bin/sh, -c, 'tail -n+1 -f /var/log/legacy-app.log'] 
    volumeMounts: 
    - name: varlog 
      mountPath: /var/log 
  volumes:    # volumes块在导出的yaml下面已经有了，在已有的添加下面两行即可 
  - name: varlog 
    emptyDir: {}
