operation/CKA/7_ingress_path.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: front-start
  namespace: ing-internal
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /hello 
        pathType: Prefix 
        backend: 
          service: 
            name: front-end-svc
            port: 
              number: 80
