operation/CKA/5_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-port-from-namespace 
  namespace: my-app 
spec: 
  podSelector: {}
  policyTypes: 
  - Ingress 
  ingress:
  - from: 
    - namespaceSelector: 
        matchLabels: 
          name: big-corp 
    ports: 
    - protocol: TCP 
      port: 8080
